--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="content">
       <header class="header">
         <div class="logo__container">
-          <img src="../images/logo.jpeg" class="logo" />
+          <img src="./images/logo.jpeg" class="logo" />
         </div>
         <div class="organisation__name">
           <p class="header__paragraph">
