--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             target="_blank"
           >
             <img
-              src="/images/qr__code.jpg"
+              src="./images/qr__code.jpg"
               alt="Ссылка на организацию в Яндексе"
             />
           </a>
